# gl-places

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  opts.example.cmake
cmake/: base.cmake  debug.cmake  libs.cmake  os.cmake  release.cmake
cmake/base/: warnings.cmake
cmake/libs/: glew.cmake  glfw.cmake  glm.cmake  nlohmann-json.cmake  opengl.cmake  stb.cmake
data/: gl-places.example.json
env/debug/: env.example.hh
env/release/: env.example.hh
header/: app.hh  config.hh  errors.hh  world.hh
header/object/: cube.hh  data.hh  directional_light.hh  rect.hh  shaders.hh  square.hh  vao.hh  walk_camera.hh
header/scene/: museum.hh
header/util/: border.hh  cond.hh  delta.hh  errors.hh  fs.hh  gl_info.hh  os.hh
shader/: line_frag.glsl
shaders/: echo_frag.glsl  echo_vert.glsl  line_vert.glsl
src/: app.cc  fs.cc  info.cc  main.cc  world.cc
src/headers/: info.hh
src/object/: cube.cc  rect.cc  shaders.cc  square.cc  vao.cc  walk_camera.cc
src/scene/: museum.cc
src/util/: border.cc  delta.cc  fs.cc  gl_info.cc
